// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Roles /> should render correctly 1`] = `
<TableToolbarView
  actionResolver={[Function]}
  borders={true}
  checkedRows={Array []}
  columns={
    Array [
      Object {
        "key": "display_name",
        "title": "Name",
        "transforms": Array [
          [Function],
          [Function],
        ],
      },
      Object {
        "title": "Description",
      },
      Object {
        "title": "Permissions",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "title": "Groups",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "key": "modified",
        "title": "Last modified",
        "transforms": Array [
          [Function],
          [Function],
        ],
      },
    ]
  }
  createRows={[Function]}
  data={
    Array [
      Object {
        "accessCount": "test",
        "description": "test",
        "groups_in_count": 5,
        "modified": 1970-01-01T00:00:00.000Z,
        "name": "Test name",
        "system": "test",
        "uuid": "test",
      },
    ]
  }
  fetchData={[Function]}
  filterItems={Array []}
  filterPlaceholder="name"
  filterValue=""
  filters={Array []}
  hideFilterChips={false}
  hideHeader={false}
  isCollapsible={false}
  isCompact={false}
  isFilterable={false}
  isLoading={false}
  isSelectable={false}
  ouiaId="roles-table"
  pagination={
    Object {
      "itemCount": 0,
      "limit": 20,
      "offset": 0,
    }
  }
  routes={[Function]}
  setCheckedItems={[Function]}
  setFilterValue={[Function]}
  sortBy={
    Object {
      "direction": "asc",
      "index": 0,
    }
  }
  titlePlural="roles"
  titleSingular="role"
  toolbarButtons={[Function]}
/>
`;

exports[`<Roles /> should render correctly in loading state 1`] = `
<ListLoader
  items={5}
/>
`;

exports[`<Roles /> should render correctly in org admin 1`] = `
<TableToolbarView
  actionResolver={[Function]}
  borders={true}
  checkedRows={Array []}
  columns={
    Array [
      Object {
        "key": "display_name",
        "title": "Name",
        "transforms": Array [
          [Function],
          [Function],
        ],
      },
      Object {
        "title": "Description",
      },
      Object {
        "title": "Permissions",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "title": "Groups",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "key": "modified",
        "title": "Last modified",
        "transforms": Array [
          [Function],
          [Function],
        ],
      },
    ]
  }
  createRows={[Function]}
  data={
    Array [
      Object {
        "accessCount": "test",
        "description": "test",
        "groups_in_count": 5,
        "modified": 1970-01-01T00:00:00.000Z,
        "name": "Test name",
        "system": "test",
        "uuid": "test",
      },
    ]
  }
  dedicatedAction={
    <Link
      to="/roles/add-role"
    >
      <Button
        aria-label="Create role"
        className="pf-m-visible-on-md"
        ouiaId="create-role-button"
        variant="primary"
      >
        Create role
      </Button>
    </Link>
  }
  fetchData={[Function]}
  filterItems={Array []}
  filterPlaceholder="name"
  filterValue=""
  filters={Array []}
  hideFilterChips={false}
  hideHeader={false}
  isCollapsible={false}
  isCompact={false}
  isFilterable={false}
  isLoading={false}
  isSelectable={false}
  ouiaId="roles-table"
  pagination={
    Object {
      "itemCount": 0,
      "limit": 20,
      "offset": 0,
    }
  }
  routes={[Function]}
  setCheckedItems={[Function]}
  setFilterValue={[Function]}
  sortBy={
    Object {
      "direction": "asc",
      "index": 0,
    }
  }
  titlePlural="roles"
  titleSingular="role"
  toolbarButtons={[Function]}
/>
`;
